# splitmut-rs

./: Cargo.toml
src/: lib.rs
