[package]
name = "splitmut"
version = "0.2.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
license = "Apache-2.0/MIT"
description = "Safely retrieves multiple mutable values from the same collection."
keywords = ["mutable", "reference", "mut", "ref", "split"]
documentation = "http://docs.rs/splitmut/"
repository = "https://github.com/diwic/splitmut-rs"

[features]
serde-json-map = ["serde_json"]

[dependencies]
serde_json = { version = "1.0", optional = true }
